--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       var password = document.getElementById("password").value;
 
       var messages = {
-        "pass1": "Hi Alex 👋 This is your personal message!",
+        "pass1": "Omma! You’re seriously addicted to work. Should we stage an intervention? I admire your hustle, but don’t forget your health okay.Money can earn back, but sleep and time with your loved ones cannot replace one. 👋 ",
         "pass2": "Hey Jamie 😎 You unlocked something special.",
         "pass3": "Hello Chris 🔥 This message is just for you.",
         "pass4": "Hi Taylor 🎉 You found your secret.",
@@ -49,3 +49,4 @@
 
 </body>
 </html>
+
