--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       var password = document.getElementById("password").value;
 
       var messages = {
-        "pass1": "Omma!👋 <br> You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay! Your health and your time with your loved ones are just as important as any deadline. ",
-        "pass2": "Hey Jamie 😎 You unlocked something special.",
+        "pass1": "Omma!👋 <br> You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay! Your health and your time with your loved ones are just as important as any deadline.<br><br>Happy Valentines Day!❤️",
+        "pass2": "Peng bro! 😎 <br> .",
         "pass3": "Hello Chris 🔥 This message is just for you.",
         "pass4": "Hi Taylor 🎉 You found your secret.",
-        "pass5": "Hey Morgan 💫 This one’s yours!"
+        "pass5": "Joanna 💫 <br> Life can be tough...<br>But you are tougher!<br><br>Happy Valentines Day!❤️"
       };
 
       if (messages[password]) {
@@ -49,5 +49,6 @@
 
 </body>
 </html>
+
 
 
