--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       var password = document.getElementById("password").value;
 
       var messages = {
-        "pass1": "Omma!👋 <br> You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay! Your health and your time with your loved ones are just as important as any deadline.<br><br>Happy Valentines Day!❤️",
-        "pass2": "Peng bro! 😎 <br> .",
-        "pass3": "Hello Chris 🔥 This message is just for you.",
-        "pass4": "Hi Taylor 🎉 You found your secret.",
-        "pass5": "Joanna 💫 <br> Life can be tough...<br>But you are tougher!<br><br>Happy Valentines Day!❤️"
+        "pass1": "Omma!👋<br><br>You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay! Your health and your time with your loved ones are just as important as any deadline.<br><br>Happy Valentines Day!❤️",
+        "pass2": "Ohayou Peng bro! 😎 <br><br> .",
+        "pass3": "Annyeong Cass bro!<br><br>NGL I though you were quite intimidating. You looked so fierce I didn't dare to talk too much😅<br>But the more I got to know you, the more I realised you are a durian.<br>You may be tough on the outside, but I know you have a good heart. I’m glad I got to see that side of you 😭<br><br>Happy Valentines Day!❤️",
+        "pass4": "Hi Chloe Bro! 🎉 You found your secret.",
+        "pass5": "Joanna💫<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentines Day!❤️"
       };
 
       if (messages[password]) {
@@ -49,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
