--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       var messages = {
         "pass1": "Omma!👋<br><br>You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay!<br>Your health and your time with your loved ones are just as important as any deadline.<br><br>Happy Valentines Day!❤️",
         "pass2": "Ohayou Peng bro!👋<br><br>A son is waiting for adoption😢<br><br>Happy Valentines Day!❤️",
-        "pass3": "Annyeong Cass bro!👋<br><br>NGL I though you were quite intimidating when I first met u during internship.<br>Ur rbf looked so fierce I didn't dare to talk to u much...kidding!!<br>But the more I got to know you, the more I realised you are a durian<br>You may be tough on the outside, but soft on the inside<br><br>I know you have a good❤️!<br>I’m glad I got to see that side of you 😭<br><br>Happy Valentines Day!❤️",
+        "pass3": "Annyeong Cass bro!👋<br><br>NGL I though you were quite intimidating when I first met u during internship.<br>Ur rbf looked so fierce I didn't dare to talk to u much...kidding!!<br>But the more I got to know you, the more I realised you are a durian.<br>You may be tough on the outside, but soft on the inside.<br><br>I know you have a good❤️!<br>I’m glad I got to see that side of you 😭<br><br>Happy Valentines Day!❤️",
         "pass4": "Hi Chloe!👋<br><br> The only admin I need ❤️<br>Thank you for your hard work and always working above and beyond.<br><br>Don't doubt what you are capable of,<br>Your are stronger than you think!<br><br>Happy Valentines Day!❤️",
         "pass5": "Joanna👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentines Day!❤️"
       };
@@ -49,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
