--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
   <div id="login">
-    <h2>Enter Your Password (3 digits)</h2>
+    <h2>Enter Your Password ("xxx"= 3 digits that is significant to you)</h2>
     <input type="password" id="password">
     <br><br>
     <button onclick="checkPassword()">Submit</button>
@@ -49,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
