--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       var password = document.getElementById("password").value;
 
       var messages = {
-        "JAS827": "Omma!👋<br><br>You’re seriously addicted to work. I admire your hustle, but don’t forget your health okay!<br>Your health and your time with your loved ones are just as important as any deadline.<br><br>Happy Valentine's Day!❤️",
-        "YP306": "Ohayou Omma Peng!👋<br><br>A son is waiting for adoption😢<br><br>Happy Valentine's Day!❤️",
-        "C893": "Annyeong Cass!👋<br><br>NGL I though you were quite intimidating when I first met u during internship.<br>Ur rbf looked so fierce I didn't dare to talk to u much...kidding!!<br>But the more I got to know you, the more I realised you are a durian.<br>You may be tough on the outside, but soft on the inside.<br><br>I know you have a good❤️!<br>I’m glad I got to see that side of you 😭<br><br>Happy Valentine's Day!❤️",
-        "CH877": "Hi Chloe!👋<br><br> The only admin I need ❤️<br>Thank you for your hard work and always working above and beyond.<br><br>Don't doubt what you are capable of,<br>Your are stronger than you think!<br><br>Happy Valentine's Day!❤️",
-        "JO822": "Joanna👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentine's Day!❤️"
+        "JAS305": "Omma!👋<br><br>It's not about what you have, but who you have in life that matters ❤️<br><br>Happy Valentine's Day!❤️",
+        "YP306": "Ohayou Omma Peng!👋<br><br>Everything is going to work out💪<br><br>P.S. A son is waiting for adoption😢<br><br>Happy Valentine's Day!❤️",
+        "CAS307": "Annyeong Cass!👋<br><br>What is coming is better than what is gone...<br>Be kind to yourself ❤️<br><br>Happy Valentine's Day!❤️",
+        "CH308": "Hi Chloe!👋<br><br> The only admin I need ❤️<br><br>Don't doubt what you are capable of,<br>Your are stronger than you think!<br><br>Happy Valentine's Day!❤️",
+        "J309": "Joanna👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentine's Day!❤️"
       };
 
       if (messages[password]) {
@@ -49,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
