--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         "YP926": "Ohayou Omma Peng!👋<br><br>Everything is going to work out💪<br><br>P.S. A son is waiting for adoption😢<br><br>Happy Valentine's Day!❤️",
         "CAS893": "Annyeong Cass!👋<br><br>What is coming is better than what is gone...<br>Be kind to yourself ❤️<br><br>Happy Valentine's Day!❤️",
         "CH827": "Hi Chloe!👋<br><br> The only admin I need ❤️<br><br>Don't doubt what you are capable of,<br>Your are stronger than you think!<br><br>Happy Valentine's Day!❤️",
-        "J822": "Joanna👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentine's Day!❤️"
+        "J822": "Joanna👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentine's Day!❤️",
+        "KAE696": "Hi MaoGe👋<br><br>Life can be tough...<br>But you are tougher!<br><br>Happy Valentine's Day!❤️"
       };
 
       if (messages[password]) {
@@ -49,6 +50,7 @@
 
 </body>
 </html>
+
 
 
 
